--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 monthly_challenges/challenges/__pycache__/views.cpython-310.pyc
 monthly_challenges/challenges/__pycache__/__init__.cpython-310.pyc
 monthly_challenges/challenges/__pycache__/urls.cpython-310.pyc
+monthly_challenges/monthly_challenges/__pycache__/urls.cpython-310.pyc
