--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,12 @@
 my_site/db.sqlite3
+my_site/blog/__pycache__/__init__.cpython-310.pyc
+my_site/blog/__pycache__/admin.cpython-310.pyc
+my_site/blog/__pycache__/apps.cpython-310.pyc
+my_site/blog/__pycache__/models.cpython-310.pyc
+my_site/blog/__pycache__/urls.cpython-310.pyc
+my_site/blog/__pycache__/views.cpython-310.pyc
+my_site/blog/migrations/__pycache__/__init__.cpython-310.pyc
+my_site/my_site/__pycache__/__init__.cpython-310.pyc
+my_site/my_site/__pycache__/settings.cpython-310.pyc
+my_site/my_site/__pycache__/urls.cpython-310.pyc
+my_site/my_site/__pycache__/wsgi.cpython-310.pyc
