--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ my_site/my_site/__pycache__/__init__.cpython-310.pyc
 my_site/my_site/__pycache__/settings.cpython-310.pyc
 my_site/my_site/__pycache__/urls.cpython-310.pyc
 my_site/my_site/__pycache__/wsgi.cpython-310.pyc
+django_stuff.code-workspace
