--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,9 @@ book_store/book_outlet/__pycache__/__init__.cpython-310.pyc
 book_store/book_outlet/__pycache__/admin.cpython-310.pyc
 book_store/book_outlet/__pycache__/apps.cpython-310.pyc
 book_store/book_outlet/__pycache__/models.cpython-310.pyc
-book_store/book_outlet/migrations/0001_initial.py
 book_store/book_outlet/migrations/__pycache__/__init__.cpython-310.pyc
 book_store/book_outlet/migrations/__pycache__/0001_initial.cpython-310.pyc
 book_store/book_store/__pycache__/settings.cpython-310.pyc
 book_store/book_store/__pycache__/urls.cpython-310.pyc
+book_store/db.sqlite3
+book_store/book_outlet/migrations/__pycache__/0002_book_author_book_is_bestselling_alter_book_rating.cpython-310.pyc
