--- a/Pipfile
+++ b/Pipfile
@@ -4,6 +4,11 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+asgiref = "==3.7.2"
+django = "==5.0.1"
+sqlparse = "==0.4.4"
+typing-extensions = "==4.9.0"
+pillow = "*"
 
 [dev-packages]
 
