--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
 asgiref==3.7.2
-Django==4.2.7
+Django==5.0.1
+exceptiongroup==1.2.0
+iniconfig==2.0.0
+packaging==23.2
+pillow==10.2.0
+pluggy==1.3.0
+pytest==7.4.4
+pytest-django==4.7.0
 sqlparse==0.4.4
-typing_extensions==4.8.0
+tomli==2.0.1
+typing_extensions==4.9.0
